--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,21 @@
 
 /* font-family: 'Merienda', cursive;
 font-family: 'Rubik', sans-serif; */
+
+.animacion {
+    animation-name: mostrarMenu;
+    animation-duration: .3s;
+    animation-iteration-count: 1;
+    animation-delay: 0s;
+    animation-timing-function: ease;
+}
+
+@keyframes mostrarMenu {
+    0% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
