--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ font-family: 'Rubik', sans-serif; */
     /* z-index: -1; */
 }
 
-.animacion {
+.mostrar {
     animation-name: mostrarMenu;
     animation-duration: .3s;
     animation-iteration-count: 1;
@@ -52,3 +52,9 @@ font-family: 'Rubik', sans-serif; */
         transform: translateY(0);
     }
 }
+
+/* .ocultar {
+    transition: all .3s;
+    transform: translateY(-100%);
+    visibility: hidden;
+} */
